# embassy-test

./: Cargo.toml  flake.nix
projects/hello-blinky/: Cargo.toml
projects/hello-blinky/src/: main.rs
projects/intro/: Cargo.toml
projects/intro/src/: main.rs
projects/juke-box/: Cargo.toml
projects/juke-box/.cargo/: config.toml
projects/juke-box/src/: main.rs
projects/speaker/: Cargo.toml
projects/speaker/src/: main.rs
