[package]
name = "speaker"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "defmt",
  "executor-thread",
] }
embassy-nrf = { version = "0.9.0", features = [
  "defmt",
  "nrf52833",
  "gpiote",
  "defmt",
  "time",
  "time-driver-rtc1",
] }
embassy-time = "0.5.0"
panic-halt = "1.0.0"
